// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Component renders correctly in English 1`] = `
<div>
  <section
    class="py-32 min-h-screen flex items-center relative bg-background"
    id="about"
  >
    <div
      class="absolute inset-0 bg-[url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/3d-wall.jpg-kTNp9iGlmZRCDKNicouRCL3pc449Qp.jpeg')] bg-cover bg-center opacity-20 dark:opacity-10"
    />
    <div
      class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-16 relative z-10"
    >
      <div
        animate="[object Object]"
        class="md:w-1/2"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="relative"
        >
          <div
            class="w-80 h-80 mx-auto"
          >
            <img
              alt="Rico Rodriquez Collins"
              class="rounded-2xl w-full h-full object-cover shadow-2xl"
              height="400"
              src="/img/hero.jpeg"
              width="400"
            />
          </div>
        </div>
      </div>
      <div
        animate="[object Object]"
        class="md:w-1/2 space-y-8"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="text-3xl md:text-5xl figure-heading"
            style="line-height: 1.75;"
          >
            RICO COLLINS
          </h1>
          <h2
            class="text-2xl md:text-3xl figure-heading"
          >
            EXPERIENCED FULL STACK & MOBILE ENGINEER
          </h2>
          <p
            class="text-lg figure-text max-w-2xl"
            style="color: white; padding-left: 10px;"
          >
            Technical leader who champions sustainable engineering practices through empathy and collaboration. I excel at fostering team environments where open communication drives innovation and inclusivity enables everyone's best work.
          </p>
        </div>
        <div
          class="space-y-4"
        >
          <a
            class="block"
            href="mailto:hello.world@codeforgood.com"
            rel=""
            target="_self"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                hello.world@codeforgood.com
              </span>
            </div>
          </a>
          <a
            class="block"
            href="https://www.linkedin.com/in/ricocollins"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <path
                  d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                www.linkedin.com/in/ricocollins
              </span>
            </div>
          </a>
          <a
            class="block"
            href="https://www.google.com/maps/place/Los+Angeles,+CA"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                Los Angeles, California, United States
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero Component renders correctly in German 1`] = `
<div>
  <section
    class="py-32 min-h-screen flex items-center relative bg-background"
    id="about"
  >
    <div
      class="absolute inset-0 bg-[url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/3d-wall.jpg-kTNp9iGlmZRCDKNicouRCL3pc449Qp.jpeg')] bg-cover bg-center opacity-20 dark:opacity-10"
    />
    <div
      class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-16 relative z-10"
    >
      <div
        animate="[object Object]"
        class="md:w-1/2"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="relative"
        >
          <div
            class="w-80 h-80 mx-auto"
          >
            <img
              alt="Rico Rodriquez Collins"
              class="rounded-2xl w-full h-full object-cover shadow-2xl"
              height="400"
              src="/img/hero.jpeg"
              width="400"
            />
          </div>
        </div>
      </div>
      <div
        animate="[object Object]"
        class="md:w-1/2 space-y-8"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="text-3xl md:text-5xl figure-heading"
            style="line-height: 1.75;"
          >
            RICO COLLINS
          </h1>
          <h2
            class="text-2xl md:text-3xl figure-heading"
          >
            ERFAHRENER FULL-STACK- UND MOBILE-INGENIEUR
          </h2>
          <p
            class="text-lg figure-text max-w-2xl"
            style="color: white; padding-left: 10px;"
          >
            Technischer Leiter, der nachhaltige Ingenieurpraktiken durch Empathie und Zusammenarbeit fördert. Ich bin hervorragend darin, Teamumgebungen zu schaffen, in denen offene Kommunikation Innovation vorantreibt und Inklusivität die beste Arbeit aller ermöglicht.
          </p>
        </div>
        <div
          class="space-y-4"
        >
          <a
            class="block"
            href="mailto:hello.world@codeforgood.com"
            rel=""
            target="_self"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                hello.world@codeforgood.com
              </span>
            </div>
          </a>
          <a
            class="block"
            href="https://www.linkedin.com/in/ricocollins"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <path
                  d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                www.linkedin.com/in/ricocollins
              </span>
            </div>
          </a>
          <a
            class="block"
            href="https://www.google.com/maps/place/Los+Angeles,+CA"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                Los Angeles, California, United States
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero Component renders correctly in Spanish 1`] = `
<div>
  <section
    class="py-32 min-h-screen flex items-center relative bg-background"
    id="about"
  >
    <div
      class="absolute inset-0 bg-[url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/3d-wall.jpg-kTNp9iGlmZRCDKNicouRCL3pc449Qp.jpeg')] bg-cover bg-center opacity-20 dark:opacity-10"
    />
    <div
      class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-16 relative z-10"
    >
      <div
        animate="[object Object]"
        class="md:w-1/2"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="relative"
        >
          <div
            class="w-80 h-80 mx-auto"
          >
            <img
              alt="Rico Rodriquez Collins"
              class="rounded-2xl w-full h-full object-cover shadow-2xl"
              height="400"
              src="/img/hero.jpeg"
              width="400"
            />
          </div>
        </div>
      </div>
      <div
        animate="[object Object]"
        class="md:w-1/2 space-y-8"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="text-3xl md:text-5xl figure-heading"
            style="line-height: 1.75;"
          >
            RICO COLLINS
          </h1>
          <h2
            class="text-2xl md:text-3xl figure-heading"
          >
            INGENIERO EXPERIMENTADO EN FULL STACK Y MÓVIL
          </h2>
          <p
            class="text-lg figure-text max-w-2xl"
            style="color: white; padding-left: 10px;"
          >
            Líder técnico que defiende prácticas de ingeniería sostenibles a través de la empatía y la colaboración. Sobresalgo en fomentar entornos de equipo donde la comunicación abierta impulsa la innovación y la inclusividad permite el mejor trabajo de todos.
          </p>
        </div>
        <div
          class="space-y-4"
        >
          <a
            class="block"
            href="mailto:hello.world@codeforgood.com"
            rel=""
            target="_self"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                hello.world@codeforgood.com
              </span>
            </div>
          </a>
          <a
            class="block"
            href="https://www.linkedin.com/in/ricocollins"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <path
                  d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                www.linkedin.com/in/ricocollins
              </span>
            </div>
          </a>
          <a
            class="block"
            href="https://www.google.com/maps/place/Los+Angeles,+CA"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="flex items-center p-4 rounded-xl professional-card group cursor-pointer"
              whilehover="[object Object]"
              whiletap="[object Object]"
            >
              <svg
                class="w-5 h-5 mr-4 text-blue-500 group-hover:text-blue-600 transition-colors"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="text-foreground group-hover:text-blue-600 transition-colors"
              >
                Los Angeles, California, United States
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
